<!--
  ~ Copyright (c) 2019 Casey English
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Carrier Hours Tracker</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="enter">Add Entry</string>
    <string name="update">Update Entry</string>
    <string name="date">Date</string>
    <string name="start_colon">Start:</string>
    <string name="end_colon">End:</string>
    <string name="hours_colon">Hours:</string>
    <string name="overtime_colon">Overtime:</string>
    <string name="penalty_colon">Penalty:</string>
    <string name="empty_not_saved">Entry Cancelled</string>
    <string name="action_clear">Clear Entries</string>
    <string name="week_view">Week View</string>
    <string name="straight">Straight:</string>
    <string name="settings">Settings</string>
    <string name="default_rounding_value">true</string>
    <string name="conversion">Minutes Chart</string>
    <string name="chart_description">Minutes to Hundredths Conversion Chart</string>
</resources>
