<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Casey English
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tv_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_item_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_colon"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_date" />

    <TextView
        android:id="@+id/tv_item_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_item_start"
        app:layout_constraintStart_toEndOf="@+id/tv_item_start" />

    <TextView
        android:id="@+id/tv_item_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/end_colon"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_item_end_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_date" />

    <TextView
        android:id="@+id/tv_item_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_item_end"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_item_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_item_hours_label"
        app:layout_constraintStart_toEndOf="@+id/tv_item_hours_label" />

    <TextView
        android:id="@+id/tv_item_hours_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/hours_colon"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_start" />

    <TextView
        android:id="@+id/tv_item_overtime_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/overtime_colon"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_item_overtime"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/tv_item_hours"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_start" />

    <TextView
        android:id="@+id/tv_item_overtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_item_overtime_label"
        app:layout_constraintEnd_toStartOf="@+id/tv_item_penalty_label"
        app:layout_constraintStart_toEndOf="@+id/tv_item_overtime_label" />

    <TextView
        android:id="@+id/tv_item_penalty_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/penalty_colon"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_item_penalty"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_start" />

    <TextView
        android:id="@+id/tv_item_penalty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_item_penalty_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_overtime_label" />

</androidx.constraintlayout.widget.ConstraintLayout>